syntax = "proto3";

package car;

service CarService {
  rpc AddCar (AddCarRequest) returns (CarResponse);
  rpc UpdateCar (UpdateCarRequest) returns (CarResponse);
  rpc DeleteCar (DeleteCarRequest) returns (DeleteResponse);
  rpc GetCars (GetCarsRequest) returns (CarsResponse);
  rpc GetCar (GetCarRequest) returns (CarResponse);
  rpc BlockAvailability (BlockAvailabilityRequest) returns (BlockAvailabilityResponse);
  rpc GetBlockedSlots (GetBlockedSlotsRequest) returns (BlockedSlotsResponse);
}

message Car {
  int32 id = 1;
  string make = 2;
  string model = 3;
  int32 year = 4;
  string color = 5;
  string description = 6;
  string image_url = 7;
  string dealer_id = 8;
  string created_at = 9;
}

message AddCarRequest {
  string make = 1;
  string model = 2;
  int32 year = 3;
  string color = 4;
  string description = 5;
  string image_url = 6;
  string dealer_id = 7;
}

message UpdateCarRequest {
  int32 id = 1;
  string make = 2;
  string model = 3;
  int32 year = 4;
  string color = 5;
  string description = 6;
  string image_url = 7;
}

message DeleteCarRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message GetCarsRequest {
  string dealer_id = 1; // Optional filter
}

message CarsResponse {
  repeated Car cars = 1;
}

message GetCarRequest {
  int32 id = 1;
}

message CarResponse {
  Car car = 1;
  bool success = 2;
  string message = 3;
}

message BlockedSlot {
  int32 id = 1;
  int32 car_id = 2;
  string start_time = 3;
  string end_time = 4;
  string reason = 5;
  string created_at = 6;
}

message BlockAvailabilityRequest {
  int32 car_id = 1;
  string start_time = 2;
  string end_time = 3;
  string reason = 4;
}

message BlockAvailabilityResponse {
  bool success = 1;
  string message = 2;
  BlockedSlot blocked_slot = 3;
}

message GetBlockedSlotsRequest {
  int32 car_id = 1;
}

message BlockedSlotsResponse {
  repeated BlockedSlot blocked_slots = 1;
}
